# helix

./: .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  README.md  helix-mockup.jsx  helix_prd_v03.md  package.json  pnpm-lock.yaml  tsconfig.base.json
apps/desktop/: index.html  package.json  tsconfig.json  vite.config.ts
apps/desktop/src/: App.tsx  main.tsx
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/icons/: icon.icns
apps/desktop/src-tauri/src/: dto.rs  lib.rs  main.rs
apps/desktop/src-tauri/src/commands/: annotation.rs  file.rs  mod.rs  sequence.rs
apps/desktop/src/hooks/: useTauriCommand.ts
apps/web/: package.json
crates/helix-components/: Cargo.toml
crates/helix-components/data/: ape_default_features.txt  components.csv
crates/helix-components/src/: annotate.rs  component.rs  db.rs  lib.rs  seed_data.rs
crates/helix-core/: Cargo.toml
crates/helix-core/src/: alignment.rs  codon.rs  feature.rs  lib.rs  operations.rs  search.rs  sequence.rs
crates/helix-formats/: Cargo.toml
crates/helix-formats/src/: detect.rs  fasta.rs  genbank.rs  lib.rs
crates/helix-formats/tests/: genbank_test.rs
crates/helix-formats/tests/fixtures/: pUC19.gb
crates/helix-version/: Cargo.toml
crates/helix-version/src/: delta.rs  lib.rs
