[package]
name = "helix-components"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
helix-core = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
uuid = { workspace = true }
rusqlite = { workspace = true }
