[package]
name = "helix-formats"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
helix-core = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
uuid = { workspace = true }
nom = { workspace = true }

[dev-dependencies]
pretty_assertions = "1.4"
