[package]
name = "helix-version"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
helix-core = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
rusqlite = { workspace = true }
