[package]
name = "helix-desktop"
version.workspace = true
edition.workspace = true
license.workspace = true

[lib]
name = "helix_desktop"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
helix-core = { workspace = true }
helix-formats = { workspace = true }
helix-version = { workspace = true }
helix-components = { workspace = true }
rusqlite = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
uuid = { workspace = true }
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tauri-plugin-shell = "2"
